--- a/code/config.json
+++ b/code/config.json
@@ -1,5 +1,6 @@
 {
   "coordinator": "127.0.0.1:9000",
+  "client_address": "127.0.0.1:9090",
   "bin_to_backend": {
     "bin0": "127.0.0.1:8000",
     "bin1": "127.0.0.1:8000",
